--- a/projects/P04-eCommerce Application/starter_code/pom.xml
+++ b/projects/P04-eCommerce Application/starter_code/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>mockito-all</artifactId>
 			<version>1.10.19</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+		</dependency>
 	</dependencies>
 
 	<build>
